[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/debug/debug_ui.gd" type="Script" id=1]

[node name="DebugUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UIRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DifficultyUpButton" type="Button" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_bottom = 24.0
text = ">"
icon_align = 1

[node name="DifficultyLabel" type="Label" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_right = -32.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 64, 12 )
text = "THIS IS THE TEXT"
align = 1
valign = 1

[node name="DifficultyDownButton" type="Button" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -176.0
margin_right = -152.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 24, 56 )
text = "<"
icon_align = 1

[node name="LevelUpButton" type="Button" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 32.0
margin_bottom = 56.0
text = ">"
icon_align = 1

[node name="LevelLabel" type="Label" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 64, 12 )
text = "THIS IS THE TEXT"
align = 1
valign = 1

[node name="LevelDownButton" type="Button" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -176.0
margin_top = 32.0
margin_right = -152.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 24, 56 )
text = "<"
icon_align = 1

[node name="GoButton" type="Button" parent="UIRoot"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -176.0
margin_top = 64.0
margin_bottom = 88.0
text = "GO !"

[node name="BootButton" type="Button" parent="UIRoot"]
margin_left = 64.0
margin_right = 114.0
margin_bottom = 20.0
text = "BOOT"

[node name="ToggleButton" type="Button" parent="."]
margin_right = 58.0
margin_bottom = 20.0
text = "DEBUG"

[connection signal="pressed" from="UIRoot/DifficultyUpButton" to="." method="_on_DifficultyUpButton_pressed"]
[connection signal="pressed" from="UIRoot/DifficultyDownButton" to="." method="_on_DifficultyDownButton_pressed"]
[connection signal="pressed" from="UIRoot/LevelUpButton" to="." method="_on_LevelUpButton_pressed"]
[connection signal="pressed" from="UIRoot/LevelDownButton" to="." method="_on_LevelDownButton_pressed"]
[connection signal="pressed" from="UIRoot/GoButton" to="." method="_on_GoButton_pressed"]
[connection signal="pressed" from="UIRoot/BootButton" to="." method="_on_BootButton_pressed"]
[connection signal="pressed" from="ToggleButton" to="." method="_on_Button_toggle_pressed"]
